# ecommerce-backend-with-rust

./: Cargo.toml
src/: db.rs  main.rs  models.rs
src/config/: database.rs
src/handlers/: auth.rs  mod.rs  product.rs  upload.rs
src/middleware/: auth.rs
src/models/: cart.rs  mod.rs  order.rs  product.rs  user.rs
src/routes/: api.rs
src/services/: auth.rs  mod.rs  product.rs  s3.rs
src/utils/: error.rs  response.rs
