[package]
name = "ecommerce-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }



# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Environment variables
dotenv = "0.15"

# Payment integration (Paystack)
reqwest = { version = "0.12.24", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mongodb = "3.3.0"

[dev-dependencies]
axum-test = "18.1.0"
