[package]
name = "ecommerce-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

# MongoDB
mongodb = "3.3.0"
bson = { version = "3.0.0", features = ["chrono-0_4"] }
futures-util = "0.3.31"

# AWS S3 (add these for image upload)
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.108"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
async-trait = "0.1"  # Add this line!

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Environment variables
dotenv = "0.15"

# Payment integration (Paystack)
reqwest = { version = "0.12.24", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CORS
tower-http = { version = "0.6", features = ["cors", "limit"] }

[dev-dependencies]
axum-test = "18.1.0"


